Fix dates contrast.

--- a/themes/gmmm-theme/source/post.css
+++ b/themes/gmmm-theme/source/post.css
@@ -5,7 +5,7 @@
 
 .post-header > .post-date {
     margin-top: 5px;
-    opacity: 0.6;
+    opacity: 0.7;
 }
 
 .post-content {
